--- a/bower.json
+++ b/bower.json
@@ -10,7 +10,8 @@
     "client/www/lib"
   ],
   "dependencies": {
-    "ionic": "driftyco/ionic-bower#v1.1.1"
+    "ionic": "driftyco/ionic-bower#v1.1.1",
+    "jquery": "~2.2.0"
   },
   "resolutions": {
     "angular": "1.4.3",
