--- a/package.json
+++ b/package.json
@@ -25,9 +25,11 @@
     "body-parser": "^1.14.2",
     "bower": "^1.3.3",
     "express": "^4.13.3",
+    "express-session": "^1.13.0",
     "mongoose": "^4.3.4",
     "node-soundcloud": "0.0.4",
     "request": "^2.67.0",
-    "socket.io": "^1.4.0"
+    "socket.io": "^1.4.0",
+    "twilio": "^2.8.0"
   }
 }
