--- a/package.json
+++ b/package.json
@@ -22,11 +22,12 @@
   },
   "homepage": "https://github.com/jchen85/Q",
   "dependencies": {
-    "bower": "^1.3.3",
     "body-parser": "^1.14.2",
+    "bower": "^1.3.3",
     "express": "^4.13.3",
     "mongoose": "^4.3.4",
     "node-soundcloud": "0.0.4",
+    "request": "^2.67.0",
     "socket.io": "^1.4.0"
   }
 }
