--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
   "dependencies": {
     "body-parser": "^1.14.2",
     "bower": "^1.3.3",
+    "cron": "^1.1.0",
+    "dotenv": "^1.2.0",
     "express": "^4.13.3",
     "express-session": "^1.13.0",
     "mongoose": "^4.3.4",
