--- a/package.json
+++ b/package.json
@@ -24,14 +24,22 @@
   "dependencies": {
     "body-parser": "^1.14.2",
     "bower": "^1.3.3",
+    "browser-sync": "^2.11.0",
     "cron": "^1.1.0",
     "dotenv": "^1.2.0",
     "express": "^4.13.3",
     "express-session": "^1.13.0",
+    "gulp": "^3.9.0",
+    "gulp-jshint": "^2.0.0",
+    "gulp-nodemon": "^2.0.6",
+    "gulp-uglify": "^1.5.1",
+    "jshint": "^2.9.1",
+    "karma": "^0.13.19",
     "mongoose": "^4.3.4",
     "node-soundcloud": "0.0.4",
     "request": "^2.67.0",
     "socket.io": "^1.4.0",
-    "twilio": "^2.8.0"
+    "twilio": "^2.8.0",
+    "uglify": "^0.1.5"
   }
 }
